--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -49,7 +49,7 @@
                         <div class="login_box">
                             {{ form_row(registrationForm.plainPassword, {
                                 label: 'Password'}) }}                           
-                            <i class="ri-key-fill login_eye"></i>
+                            <i class="ri-key-fill login_eye" id="input-icon"></i>
                     </div>
                             <div class="login_check">
                              
