--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,9 +11,6 @@
         <title>Login</title>
 {% endblock %}
 
-{% block javascript %}
-        <script type="text/javascript" src="{{ asset('js/main.js') }}" defer></script>
-{% endblock %}
 
 
 {% block body %}
@@ -53,11 +50,11 @@
                         
 
                         <div>
-                            <label for="inputPassword" {{ 'label.password'}} class="login_label">Mot de Passe</label>
+                            <label for="inputPassword" class="login_label">Mot de Passe</label>
 
                         <div class="login_box">
-                            <input id="inputPassword" type="password" placeholder="Entrez votre Mot de Passe"  class="login_input" autocomplete="current-password">
-                            <i class="ri-eye-off-fill login_eye" id="input-icon"></i>
+                            <input id="inputPassword" type="password" placeholder="Entrez votre Mot de Passe"  class="login_input" autocomplete="current-password" name="password">
+                            <i class="ri-key-fill login_eye" id="input-icon"></i>
                            </div>
                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         </div>
@@ -71,11 +68,9 @@
                             <div>
                                 <div class="login-buttons">
                                     <button class="login_button">Se Connecter</button>
-                                    <a href="{{ path('app_accueil') }}"></a>
-                                    <button class="login_button login_button-ghost">S'inscrire</button>
-                                </div>
-                                <a href="#" class="login_forgot"></a>
-                            </div>
+                                    <a href="{{path('app_register')}}" class="login_button login_button-ghost">S'inscrire</a>
+
+                              
                 </form>
             </div>
         </div>
