--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,15 +5,15 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 
         {% block javascript %}
-        <script type="text/javascript" src="{{ asset('js/scriptpagearticles.js') }}" defer></script>
+       {#   <script type="text/javascript" src="{{ asset('js/scriptgeneral.js') }}" defer></script>#}
+
     <script type="text/javascript" src="{{ asset('js/scriptgeneral.js') }}" defer></script>
     {% endblock %}
     </head>
-    <body>
-       <header>
+<body>
+    <header>
 <nav>
 <ul class="menu">
         <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li>
@@ -39,15 +39,15 @@
 <h1>MARDI 20 DECEMBRE 2022</h1>
 <h1>A BAYONNE</h1>
 </div>
+      </div>
 
-<form action="reponse_recherche.php" method="GET" data-parsley-validate class="nav_form" id="nav-form">
-    <input type="search" id="real" placeholder="Recherche" list="manifestation" name="recherche_manifs" autocomplete="off" />
-    <input type="submit" id="bouton_recherche" value="Envoyer"> 
-</form>
+
+
+
           {% block content %}
 
           {% endblock %}
-    </body>
 
 
+</body>
 </html>
