--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -29,7 +29,8 @@
     <br>
     <form action="finalisation.php" method="post">
     <input type="hidden" name="liste" id="liste">
-    <input type="submit" value="VALIDER" class="valider">
+    <a href="{{ path('app_data_user_new') }}" class="valider">Continuer</a>
+        <a href="{{ path('app_accueil') }}" class="valider">Retour</a>
   </form>
     </div>
     </section>
