--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -39,10 +39,14 @@
                     <div>
                         <div class="login_inputs">
                             <div>
-                                    {{ form_row(registrationForm.email) }}
+                                    {{ form_row(registrationForm.name) }}
 
                         </div>
-                        
+
+                            <div>
+                                {{ form_row(registrationForm.email) }}
+
+                            </div>
 
                         <div>
 
