--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== CSS ===============-->
-        <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('css/style2.css') }}" rel="stylesheet"/>
         <title>Login</title>
 {% endblock %}
 
