--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -33,7 +33,7 @@
     <br>
     <form action="finalisation.php" method="post">
     <input type="hidden" name="liste" id="liste">
-    <a href="#" class="valider">Continuer</a>
+    <a href="{{ path('app_data_user_new') }}" class="valider">Continuer</a>
         <a href="{{ path('app_accueil') }}" class="valider">Retour</a>
   </form>
     </div>
