--- a/templates/data_user/new.html.twig
+++ b/templates/data_user/new.html.twig
@@ -17,7 +17,7 @@
                                 <div class="content">
 
                                         {{ include('data_user/_form.html.twig') }}
-                                    <a class="btn btn-border-fill btn-block mt-2" href="{{ path('app_accueil') }}">Retour Accueil</a>
+                                    <a  href="{{ path('app_accueil') }}">Retour Accueil</a>
                                 </div>
                             </div>
                         </div>
