--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -8,6 +8,9 @@
     </title>
     <link href="{{ asset('css/style2.css') }}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@0.5.3/dist/css/axentix.min.css"> {% block stylesheets %}{% endblock %}
+    {% block javascript %}
+    <script src="{{ asset('js/scriptgeneral.js') }}" defer></script>
+{% endblock %}
 </head>
 <body class="layout with-sidenav">
 <header>
@@ -28,8 +31,8 @@
         </button>
         <img class="logo dropshadow-1" src="your_img_path" alt="Logo"/>
     </div>
-    <a href="#" class="sidenav-link active">Mon profil</a>
-    <a href="#" class="sidenav-link">Mes Achats</a>
+    <a href="{{ path('app_user') }}" class="sidenav-link active">Mon profil</a>
+    <a href="{{ path('app_user_achat') }}" class="sidenav-link">Mes Achats</a>
 </div>
 <main>
     <button data-target="example-sidenav" class="btn press amaranth dark-1 sidenav-trigger hide-md-up">
@@ -39,7 +42,6 @@
 </main>
 
 <footer class="footer">
-    Copyright © 2019 - Example
 </footer>
 
 
